Começando o estrutura do HTML para o DOM

--- a/Estudo/index.html
+++ b/Estudo/index.html
@@ -7,6 +7,19 @@
     <title>Javascript</title>
 </head>
 <body>
+    <main>
+        <h1>Convidados</h1>
+
+        <form>
+            <input type="text" id="task" placeholder="Digite sua task...">
+            <button type="submit" id="btn">Adicionar</button>
+        </form>
+
+        <ul>
+            <li>Rodrigo</li>
+            <li>Mayk</li>
+        </ul>
+    </main>
     <script src="index.js"></script>
 </body>
 </html>
