Finalizando estilização do form

--- a/Estudo/index.html
+++ b/Estudo/index.html
@@ -11,7 +11,7 @@
         <h1>Convidados</h1>
 
         <form>
-            <input type="text" id="task" placeholder="Digite sua task...">
+            <input type="text"  id="task" placeholder="Digite sua task..." autofocus>
             <button type="submit" id="btn">Adicionar</button>
         </form>
 
