Selecionando pelo Id

--- a/Estudo/index.html
+++ b/Estudo/index.html
@@ -16,8 +16,8 @@
         </form>
 
         <ul>
-            <li>Rodrigo</li>
-            <li>Mayk</li>
+            <li id="guest-1">Rodrigo</li>
+            <li id="guest-2">Mayk</li>
         </ul>
     </main>
     <script src="index.js"></script>
