--- a/Estudo/index.html
+++ b/Estudo/index.html
@@ -9,6 +9,7 @@
 <body>
     <main class="hero">
         <h1>Convidados</h1>
+        <li>Obrigado</li>
 
         <form>
             <input type="text"  id="task" placeholder="Digite sua task..." autofocus>
