Alterando o comportamento do html

--- a/Estudo/index.html
+++ b/Estudo/index.html
@@ -17,8 +17,13 @@
         </form>
 
         <ul>
-            <li id="guest-1" class="guest">Rodrigo</li>
-            <li id="guest-2" class="guest">Mayk</li>
+            <li id="guest-1" class="guest" style="display: flex; justify-content: space-between;">
+                <span>Rodrigo</span>
+                <span style="display: none;">Olá</span>
+            </li>
+            <li id="guest-2" class="guest">
+                <span>Mayk</span>
+            </li>
         </ul>
     </main>
     <script src="index.js"></script>
