Mundando um conteúdo quando é textContent e innerText

--- a/Estudo/index.html
+++ b/Estudo/index.html
@@ -19,7 +19,7 @@
         <ul>
             <li id="guest-1" class="guest" style="display: flex; justify-content: space-between;">
                 <span>Rodrigo</span>
-                <span style="display: none;">Olá</span>
+                <span>Olá</span>
             </li>
             <li id="guest-2" class="guest">
                 <span>Mayk</span>
