--- a/Estudo/index.html
+++ b/Estudo/index.html
@@ -17,11 +17,32 @@
         </form>
 
         <ul>
-            <li id="guest-1" class="guest" style="display: flex; justify-content: space-between;">
-                <span>Rodrigo</span>
+            <li id="guest-1" class="guest">
+                <span>Cauê</span>
             </li>
             <li id="guest-2" class="guest">
-                <span>Mayk</span>
+                <span>Pitica</span>
+            </li>
+
+            <li id="guest-1" class="guest">
+                <span>Geovanna Alves</span>
+            </li>
+            <li id="guest-2" class="guest">
+                <span>Geovanna Vasconcelos Alves</span>
+            </li>
+
+            <li id="guest-1" class="guest">
+                <span>Geovanna Barreto</span>
+            </li>
+            <li id="guest-2" class="guest">
+                <span>Cauê Alves Vasconcelos</span>
+            </li>
+
+            <li id="guest-1" class="guest">
+                <span>Cauê Vasconcelos</span>
+            </li>
+            <li id="guest-2" class="guest">
+                <span>Caue e Geovanna</span>
             </li>
         </ul>
     </main>
