style: Começando a estrutura semântica do header

--- a/Projetos/Pasta 2 - Lista de Compras/index.html
+++ b/Projetos/Pasta 2 - Lista de Compras/index.html
@@ -11,7 +11,19 @@
 </head>
 <body>
 
-    
+    <header>
+        <div>
+            <div>
+                <span></span>
+                <span>Voltar</span>
+            </div>
+            <h2>Compras da semana</h2>
+        </div>
+        <form>
+            <input type="text" id="namePurchases" placeholder="Adicione um novo item">
+            <button type="submit">Adicionar item</button>
+        </form>
+    </header>
 
     <script src="script.js"></script>
 </body>
