style: Começando a estrutura da lista de compras

--- a/Projetos/Pasta 2 - Lista de Compras/index.html
+++ b/Projetos/Pasta 2 - Lista de Compras/index.html
@@ -25,6 +25,39 @@
         </form>
     </header>
 
+    <main>
+        <ul>
+            <li>
+                <div>
+                    <img src="" alt="Icone de checkbox">
+                    <p>Pão de forma</p>
+                    <img src="" alt="Iconde de lixeira">
+                </div>
+            </li>
+            <li>
+                <div>
+                    <img src="" alt="Icone de checkbox">
+                    <p>Café preto</p>
+                    <img src="" alt="Iconde de lixeira">
+                </div>
+            </li>
+            <li>
+                <div>
+                    <img src="" alt="Icone de checkbox">
+                    <p>Suco de laranja</p>
+                    <img src="" alt="Iconde de lixeira">
+                </div>
+            </li>
+            <li>
+                <div>
+                    <img src="" alt="Icone de checkbox">
+                    <p>Bolacha</p>
+                    <img src="" alt="Iconde de lixeira">
+                </div>
+            </li>
+        </ul>
+    </main>
+
     <script src="script.js"></script>
 </body>
 </html>
