chore: Colocando as imagens de lixo na lista

--- a/Projetos/Pasta 2 - Lista de Compras/index.html
+++ b/Projetos/Pasta 2 - Lista de Compras/index.html
@@ -12,6 +12,7 @@
 <body>
 
     <header>
+        <img src="img/logo.png" alt="Logo quicklist">
         <div>
             <div>
                 <span></span>
@@ -29,30 +30,34 @@
         <ul>
             <li>
                 <div>
-                    <img src="" alt="Icone de checkbox">
+                    <!-- "img/check-box-default.png" -->
+                    <span></span>
                     <p>Pão de forma</p>
-                    <img src="" alt="Iconde de lixeira">
+                    <img src="img/Trash.png" alt="Iconde de lixeira">
                 </div>
             </li>
             <li>
                 <div>
-                    <img src="" alt="Icone de checkbox">
+                    <!-- "img/check-box-default.png" -->
+                    <span></span>
                     <p>Café preto</p>
-                    <img src="" alt="Iconde de lixeira">
+                    <img src="img/Trash.png" alt="Iconde de lixeira">
                 </div>
             </li>
             <li>
                 <div>
-                    <img src="" alt="Icone de checkbox">
+                    <!-- "img/check-box-default.png" -->
+                    <span></span>
                     <p>Suco de laranja</p>
-                    <img src="" alt="Iconde de lixeira">
+                    <img src="img/Trash.png" alt="Iconde de lixeira">
                 </div>
             </li>
             <li>
                 <div>
-                    <img src="" alt="Icone de checkbox">
+                    <!-- "img/check-box-default.png" -->
+                    <span></span>
                     <p>Bolacha</p>
-                    <img src="" alt="Iconde de lixeira">
+                    <img src="img/Trash.png" alt="Iconde de lixeira">
                 </div>
             </li>
         </ul>
