chore: Colocando uma div por volta da logo

--- a/Projetos/Pasta 2 - Lista de Compras/index.html
+++ b/Projetos/Pasta 2 - Lista de Compras/index.html
@@ -12,7 +12,9 @@
 <body>
 
     <header>
-        <img src="img/logo.png" alt="Logo quicklist">
+        <div>
+            <img src="img/logo.png" alt="Logo quicklist">
+        </div>
         <div>
             <div>
                 <span></span>
