--- a/Projetos/Pasta 2 - Lista de Compras/index.html
+++ b/Projetos/Pasta 2 - Lista de Compras/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 
-    <header>
-        <div>
+    <header id="hero">
+        <div class="show-logo">
             <img src="img/logo.png" alt="Logo quicklist">
         </div>
         <div>
