style: Mudando o espaçamento do hero + Começando a estilizar o hero

--- a/Projetos/Pasta 2 - Lista de Compras/index.html
+++ b/Projetos/Pasta 2 - Lista de Compras/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <header id="hero">
+    <header id="hero" class="flex flex-col gap-32">
         <div class="show-logo">
             <img src="img/logo.png" alt="Logo quicklist">
         </div>
