style: Estilizando o cabeçalho do hero

--- a/Projetos/Pasta 2 - Lista de Compras/index.html
+++ b/Projetos/Pasta 2 - Lista de Compras/index.html
@@ -15,8 +15,8 @@
         <div class="show-logo">
             <img src="img/logo.png" alt="Logo quicklist">
         </div>
-        <div>
-            <div>
+        <div class="flex flex-col informations">
+            <div id="span-hero">
                 <span></span>
                 <span>Voltar</span>
             </div>
