style: Estilizando os inputs do form

--- a/Projetos/Pasta 2 - Lista de Compras/index.html
+++ b/Projetos/Pasta 2 - Lista de Compras/index.html
@@ -15,14 +15,14 @@
         <div class="show-logo">
             <img src="img/logo.png" alt="Logo quicklist">
         </div>
-        <div class="flex flex-col informations">
+        <div class="flex flex-col">
             <div id="span-hero">
                 <span></span>
                 <span>Voltar</span>
             </div>
             <h1>Compras da semana</h1>
         </div>
-        <form>
+        <form id="input" class="flex flex-col gap-16">
             <input type="text" id="namePurchases" placeholder="Adicione um novo item">
             <button type="submit">Adicionar item</button>
         </form>
