fix: Mudando o seletor de grid para display grid

--- a/Projetos/Pasta 2 - Lista de Compras/index.html
+++ b/Projetos/Pasta 2 - Lista de Compras/index.html
@@ -28,8 +28,8 @@
         </form>
     </header>
 
-    <main>
-        <ul>
+    <main id="listPurchases">
+        <ul class="grid">
             <li>
                 <div>
                     <!-- "img/check-box-default.png" -->
