Estilizando a lista de compras

--- a/Projetos/Pasta 2 - Lista de Compras/index.html
+++ b/Projetos/Pasta 2 - Lista de Compras/index.html
@@ -29,9 +29,9 @@
     </header>
 
     <main id="listPurchases">
-        <ul class="grid">
+        <ul class="grid gap-16">
             <li>
-                <div>
+                <div class="flex">
                     <!-- "img/check-box-default.png" -->
                     <span></span>
                     <p>Pão de forma</p>
@@ -39,7 +39,7 @@
                 </div>
             </li>
             <li>
-                <div>
+                <div class="flex">
                     <!-- "img/check-box-default.png" -->
                     <span></span>
                     <p>Café preto</p>
@@ -47,7 +47,7 @@
                 </div>
             </li>
             <li>
-                <div>
+                <div class="flex">
                     <!-- "img/check-box-default.png" -->
                     <span></span>
                     <p>Suco de laranja</p>
@@ -55,7 +55,7 @@
                 </div>
             </li>
             <li>
-                <div>
+                <div class="flex">
                     <!-- "img/check-box-default.png" -->
                     <span></span>
                     <p>Bolacha</p>
