style: Estilizando a messagem de deleção

--- a/Projetos/Pasta 2 - Lista de Compras/index.html
+++ b/Projetos/Pasta 2 - Lista de Compras/index.html
@@ -65,6 +65,12 @@
         </ul>
     </main>
 
+    <div class="message-delete flex">
+        <img src="img/warning-circle-filled.png" alt="">
+        <p>Item foi removido da lista</p>
+        <img src="img/delete-small.png" alt="">
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
