chore: Colocando como autocomplete o input

--- a/Projetos/Pasta 2 - Lista de Compras/index.html
+++ b/Projetos/Pasta 2 - Lista de Compras/index.html
@@ -25,41 +25,13 @@
                 <h1>Compras da semana</h1>
             </div>
             <form id="input" class="flex flex-col gap-16">
-                <input type="text" id="namePurchases" placeholder="Adicione um novo item">
+                <input type="text" id="namePurchases" autocomplete="off" placeholder="Adicione um novo item">
                 <button type="submit">Adicionar item</button>
             </form>
         </header>
 
         <main id="listPurchases">
             <ul class="grid gap-16">
-                <li>
-                    <div class="flex">
-                        <span></span>
-                        <p>Pão de forma</p>
-                        <img src="img/Trash.png" alt="Iconde de lixeira">
-                    </div>
-                </li>
-                <li>
-                    <div class="flex">
-                        <span></span>
-                        <p>Café preto</p>
-                        <img src="img/Trash.png" alt="Iconde de lixeira">
-                    </div>
-                </li>
-                <li>
-                    <div class="flex">
-                        <span></span>
-                        <p>Suco de laranja</p>
-                        <img src="img/Trash.png" alt="Iconde de lixeira">
-                    </div>
-                </li>
-                <li>
-                    <div class="flex">
-                        <span></span>
-                        <p>Bolacha</p>
-                        <img src="img/Trash.png" alt="Iconde de lixeira">
-                    </div>
-                </li>
             </ul>
         </main>
 
