feat: Criando evento para aparecer a menssgem de item excluído

--- a/Projetos/Pasta 2 - Lista de Compras/index.html
+++ b/Projetos/Pasta 2 - Lista de Compras/index.html
@@ -32,10 +32,17 @@
 
         <main id="listPurchases">
             <ul class="grid gap-16">
+                <li>
+                    <div class="flex">
+                        <span></span>
+                        <p>Teste</p>
+                        <img src="img/Trash.png" alt="icone de lixeira">
+                    </div>
+                </li>
             </ul>
         </main>
 
-        <div class="message-delete flex">
+        <div id="message" class="message-delete-hide">
             <img src="img/warning-circle-filled.png" alt="">
             <p>Item foi removido da lista</p>
             <img src="img/delete-small.png" alt="">
