chore: Selecionando a lixeira como classe

--- a/Projetos/Pasta 2 - Lista de Compras/index.html
+++ b/Projetos/Pasta 2 - Lista de Compras/index.html
@@ -36,7 +36,7 @@
                     <div class="flex">
                         <span></span>
                         <p>Teste</p>
-                        <img src="img/Trash.png" alt="icone de lixeira">
+                        <img class="trash" src="img/Trash.png" alt="icone de lixeira">
                     </div>
                 </li>
             </ul>
