refactor: Abstrando toda a lógica para criar uma nova compra

--- a/Projetos/Pasta 2 - Lista de Compras/index.html
+++ b/Projetos/Pasta 2 - Lista de Compras/index.html
@@ -32,6 +32,13 @@
 
         <main id="listPurchases">
             <ul class="grid gap-16">
+                <li>
+                    <div class="flex">
+                        <span class="active-checkbox"></span>
+                        <p>Teste</p>
+                        <img src="img/check-box-default.png" alt="icone de lixeira">
+                    </div>
+                </li>
             </ul>
         </main>
 
