feat: funcionalidade de checar o chekbox

--- a/Projetos/Pasta 2 - Lista de Compras/index.html
+++ b/Projetos/Pasta 2 - Lista de Compras/index.html
@@ -34,9 +34,9 @@
             <ul class="grid gap-16">
                 <li>
                     <div class="flex">
-                        <span class="active-checkbox"></span>
+                        <span class="normal-checkbox"></span>
                         <p>Teste</p>
-                        <img src="img/check-box-default.png" alt="icone de lixeira">
+                        <img src="img/Trash.png" alt="icone de lixeira">
                     </div>
                 </li>
             </ul>
