--- a/Projetos/Pasta 2 - Lista de Compras/index.html
+++ b/Projetos/Pasta 2 - Lista de Compras/index.html
@@ -31,6 +31,10 @@
         </header>
 
         <main id="listPurchases">
+            <div class="flex">
+                <p>0 não feitas</p>
+                <p>0 feitas</p>
+            </div>
             <ul class="grid gap-16">
                 <li>
                     <div class="flex">
