style: Estilizando os contadores

--- a/Projetos/Pasta 2 - Lista de Compras/index.html
+++ b/Projetos/Pasta 2 - Lista de Compras/index.html
@@ -31,7 +31,7 @@
         </header>
 
         <main id="listPurchases">
-            <div class="flex">
+            <div id="cont" class="flex">
                 <p>0 não feitas</p>
                 <p>0 feitas</p>
             </div>
