feat: Colocando os botões na tela

--- a/Projetos/Projeto 3 - Quiz/index.html
+++ b/Projetos/Projeto 3 - Quiz/index.html
@@ -12,7 +12,7 @@
     
     <div id="quiz-container">
       <div id="question-container">
-        <p id="question">Pergunta aqui</p>
+        <p id="question"></p>
         <div id="options-container">
           <!-- Botões de opções irão aqui -->
         </div>
