Começando os estudos de LocalStorage

--- a/Estudo/index.html
+++ b/Estudo/index.html
@@ -3,28 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <title>Javascript</title>
+    <title>LocalStorage</title>
 </head>
 <body>
-    <main class="hero">
-        <h1>Convidados</h1>
-        <li>Obrigado</li>
 
-        <form>
-            <input type="text"  id="task" placeholder="Digite sua task..." autofocus>
-            <button type="submit" id="btn">Adicionar</button>
-        </form>
+    <form>
+        <label for="name">Digite idade
+            <input type="text" id="name">
+        </label>
 
-        <ul>
-            <li id="guest-1" class="guest">
-                <span>Cauê</span>
-            </li>
-            <li id="guest-2" class="guest">
-                <span>Pitica</span>
-            </li>
-        </ul>
-    </main>
+        <label for="age">Digite sua idade
+            <input type="number" id="age">
+        </label>
+
+        <label for="profession">Digite sua profissão
+            <input type="text" id="profession">
+        </label>
+    </form>
+
     <script src="index.js"></script>
 </body>
 </html>
