--- a/Estudo/index.html
+++ b/Estudo/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>LocalStorage</title>
 </head>
 <body>
@@ -13,7 +14,7 @@
         </label>
 
         <label for="age">Digite sua idade
-            <input type="number" id="age">
+            <input type="number" min="0" id="age">
         </label>
 
         <label for="profession">Digite sua profissão
