--- a/Estudo/index.html
+++ b/Estudo/index.html
@@ -20,6 +20,7 @@
         <label for="profession">Digite sua profissão
             <input type="text" id="profession">
         </label>
+        <button type="submit">Enviar ao JSON</button>
     </form>
 
     <script src="index.js"></script>
