--- a/Estudo/index.html
+++ b/Estudo/index.html
@@ -23,6 +23,10 @@
         <button type="submit">Enviar ao JSON</button>
     </form>
 
+    <div>
+        
+    </div>
+
     <script src="index.js"></script>
 </body>
 </html>
