feat: Fazendo validações básicas

--- a/Estudo/index.html
+++ b/Estudo/index.html
@@ -20,11 +20,11 @@
         <label for="profession">Digite sua profissão
             <input type="text" id="profession">
         </label>
-        <button type="submit">Enviar ao JSON</button>
+        <button id="btnJSON" type="submit">Enviar ao JSON</button>
     </form>
 
     <div>
-        
+
     </div>
 
     <script src="index.js"></script>
