--- a/Projetos/Projeto 4 - Refund/index.html
+++ b/Projetos/Projeto 4 - Refund/index.html
@@ -91,6 +91,6 @@
         </aside>
       </section>
     </main>
-    <script src="scripts.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
